Implemented javaFX and drawing on a Canvas instead of JPanel. Added GameState